<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.newapp2.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.newapp2.ui.transaction.TransactionFragment"
        android:label="@string/nav_transaction" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.newapp2.ui.budget.BudgetFragment"
        android:label="@string/nav_budget" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.newapp2.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation> 